[package]
name = "obex-engine-i"
version = "0.1.0"
edition = "2021"
authors = ["Obex Team"]
description = "Production-grade cryptographic library for Obex Engine I Step-1 verification"
license = "MIT OR Apache-2.0"
repository = "https://github.com/obex/obex-engine-i"
keywords = ["cryptography", "vrf", "merkle", "proof-of-storage"]
categories = ["cryptography", "algorithms"]

[dependencies]
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
thiserror = "1.0"
rand_core = { version = "0.6", features = ["getrandom"] }
vrf-r255 = "0.1"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
libfuzzer-sys = "0.4"

[features]
default = ["vrf-r255"]
std = []
vrf-r255 = []

[[bench]]
name = "crypto_benchmarks"
harness = false

# Fuzz targets are handled by cargo-fuzz, not as regular binaries
# [[bin]]
# name = "fuzz_registration_decode"
# path = "fuzz/fuzz_targets/registration_decode.rs"
# test = false
# bench = false
#
# [[bin]]
# name = "fuzz_registration_verify"
# path = "fuzz/fuzz_targets/registration_verify.rs"
# test = false
# bench = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
