[package]
name = "e2e"
version = "0.1.0"
edition = "2021"
description = "End-to-end integration tests and harness for OBEX Alpha"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aminnizamdev/Obex-"
readme = "../../README.md"
keywords = ["obex", "consensus", "e2e", "tests"]
categories = ["development-tools::testing"]

[dependencies]
obex_alpha_i = { path = "../obex_alpha_i" }
obex_alpha_ii = { path = "../obex_alpha_ii" }
obex_alpha_iii = { path = "../obex_alpha_iii" }
obex_alpha_t = { path = "../obex_alpha_t" }
obex_primitives = { path = "../obex_primitives" }
hex = "0.4"