[package]
name = "obex_alpha_iii"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Obex α III — Deterministic Admission (final within slot)"
repository = "https://github.com/obex-labs/obex-alpha"
readme = "../../README.md"
keywords = ["obex","consensus","admission","transactions","merkle"]
categories = ["cryptography","algorithms","data-structures"]

[dependencies]
obex_primitives = { path = "../obex_primitives" }
ed25519-dalek = { version = "2.2.0", default-features = true }
thiserror = "2.0.16"


[dev-dependencies]
hex = "0.4"


