[package]
name = "obex_alpha_t"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Obex α T — Tokenomics (Emission, Escrow, DRP)"
repository = "https://github.com/obex-labs/obex-alpha"
readme = "../../README.md"
keywords = ["obex","consensus","tokenomics","fees"]
categories = ["cryptography","algorithms","data-structures"]

[dependencies]
obex_primitives = { path = "../obex_primitives" }
thiserror = "2.0.16"
primitive-types = "0.12.2"

[dev-dependencies]
hex = "0.4"


