[package]
name = "obex_primitives"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Obex alpha primitives: hashing, encodings, Merkle, and utilities"
repository = "https://github.com/obex-labs/obex-alpha"
readme = "../../README.md"
keywords = ["obex","consensus","cryptography","merkle","vrf"]
categories = ["cryptography","algorithms","data-structures"]

[features]
default = ["std"]
std = ["sha3/std"]
alloc = []

[dependencies]
sha3 = { version = "0.10.8", default-features = false }
subtle = { version = "2.6.1", default-features = false }
thiserror = "2.0.16"

[dev-dependencies]
hex = "0.4"


